Integramos-herramientas/Terraform/vpc.tf
#? Create a VPC
resource "aws_vpc" "mi_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = var.name
  }
}
